# Asteroids

./: .gitignore  BACKLOG.md  Cargo.toml  DONE.md  MANUAL.md  README.md  README_FR.md  asteroids  asteroids.cmi  asteroids.cmo  asteroids.ml  bash.exe.stackdump  buttons.cmi  buttons.cmo  buttons.ml  changelog.txt  colors.cmi  colors.cmo  colors.ml  functions.cmi  functions.cmo  functions.ml  objects.cmi  objects.cmo  objects.ml  parameters.cmi  parameters.cmo  parameters.ml  project_roadmap.md
archives/: v0_1.ml  v0_2.ml  v0_3.ml  v0_4.ml  v0_5.ml  v0_6.ml  v0_7.ml  v0_8.ml  v0_9.ml  v0_9_1.ml  v0_9_2.ml  v1_0.ml  v1_1.ml  v1_2.ml  v1_3.ml  v1_4.ml  v1_5.ml  v1_6.ml
archives/v1_7/: asteroids.ml  buttons.ml  functions.ml  parameters.ml
archives/v1_8/: asteroids.ml  colors.ml  objects.ml  parameters.ml
docs/: GAME_MANUAL.md
locales/: en.ron
ml/: asteroids.cmi  asteroids.cmo  asteroids.ml  buttons.cmi  buttons.cmo  colors.cmi  colors.cmo  functions.cmi  functions.cmo  functions.ml  hud.cmi  hud.cmo  objects.cmi  objects.cmo  objects.ml  parameters.cmi  parameters.cmo
rs/: Cargo.toml  bash.exe.stackdump  build.rs
rs/src/: game.rs  main.rs  (+3 more)
scenarios/: test_basic.ron  test_visual.ron
src/: camera.rs  capture.rs  color.rs  field.rs  game.rs  glyphs.rs  input.rs  lib.rs  locale.rs  main.rs  math.rs  math_utils.rs  objects.rs  parameters.rs  pause_menu.rs  recording.rs  scenario.rs  spawning.rs  update.rs
tests/: color_properties.rs  conservation_properties.rs  entity_properties.rs  math_properties.rs  physics_properties.rs  scenario_tests.rs  vec2_properties.rs
(+40 files in other folders)
