[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24"
sdl2 = { version = "0.37", features = ["raw-window-handle"] }
raw-window-handle = "0.6"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
ron = "0.8"
zstd = "0.13"
bincode = "1"
